syntax = "proto3";

package tragedylooper.v1;

import "tragedylooper/v1/condition.proto";
import "tragedylooper/v1/effect.proto";

option go_package = "github.com/constellation39/tragedyLooper/pkg/proto/v1";

// 事件实例，在游戏运行时创建
message Incident {
  IncidentConfig config = 1; // 事件唯一ID
  bool has_triggered_this_loop = 7;
}

// 事件/悲剧在剧本中的配置
message IncidentConfig {
  int32 id = 1; // 事件唯一ID（剧本内）
  string name = 2; // 事件名称
  string description = 3; // 事件描述
  int32 day = 5; // 预定发生日期
  Condition condition = 6; // 触发条件列表
  Effect effect = 7; // 事件触发时产生的效果
  bool is_mandatory = 8; // 是否为必发事件
  bool is_main_plot_incident = 12; // 是否是主线剧情的事件
  bool is_special_rule = 13; // 是否是特殊规则的事件
}

